--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-   "name": "WALLYJAYTECH-MD",
+   "name": "Alvin-MD",
    "version": "1.0",
-   "description": "WALLYJAYTECH-MD,A Multi device whatsapp bot.",
+   "description": "POROR-MD,A Multi device whatsapp bot.",
    "main": "index.js",
    "type": "commonjs",  
    "scripts": {
